@@ -1,3 +1,8 @@
+2004-05-05 Anthony.Golia@morganstanley.com
+
+	* ripd.c: (rip_update_jitter) Bound jitter to a more sensible
+	  value, eg 1/4 of update time.
+	  
 2004-05-03 Paul Jakma <paul@dishone.st>
 
 	* ripd.c: (rip_rte_process) fix typo in merge of previous patch
